feat: add structured output (#150)
To support query suggestions, I took a different approach than I
initially intended — structured output from the model. Instead of
returning just text, we return both an "answer" and some "queries".

This makes the final AI output kinda useless, since it just "rephrases"
the structured output.

This will require some plumbing on the frontend to separate the "answer"
and the "queries" and use them appropriately.

## Checklist

<!-- Feel free to remove any items that don't apply to your PR (e.g.
small fixes may not require documentation updates). -->

- [x] Pre-commit hooks pass (`uv run prek run --all-files`)
- [x] Documentation updated
- [x] Tests pass (`uv run pytest --integration`)
- [x] The PR's title is formatted per [Conventional
Commits](https://www.conventionalcommits.org/en/v1.0.0/)

---------
