# backend/openapi.json
@@ -151,6 +151,9 @@
                     },
                     {
                       "$ref": "#/components/schemas/AiResponseMessage"
+                    },
+                    {
+                      "$ref": "#/components/schemas/OutputResponseMessage"
                     }
                   ],
                   "title": "Response Chat Chat Post"
@@ -177,7 +180,14 @@
       "AiResponseMessage": {
         "properties": {
           "content": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Content"
           },
           "thread_id": {
@@ -381,7 +391,14 @@
       "GenerateBarChartMetadataResponseMessage": {
         "properties": {
           "content": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Content"
           },
           "thread_id": {
@@ -439,7 +456,14 @@
       "GenerateTableResponseMessage": {
         "properties": {
           "content": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Content"
           },
           "thread_id": {
@@ -534,6 +558,62 @@
         "title": "Item",
         "description": "A STAC item, with only the fields we need."
       },
+      "Output": {
+        "properties": {
+          "answer": {
+            "type": "string",
+            "title": "Answer"
+          },
+          "queries": {
+            "items": {
+              "type": "string"
+            },
+            "type": "array",
+            "title": "Queries"
+          }
+        },
+        "type": "object",
+        "required": [
+          "answer",
+          "queries"
+        ],
+        "title": "Output"
+      },
+      "OutputResponseMessage": {
+        "properties": {
+          "content": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Content"
+          },
+          "thread_id": {
+            "type": "string",
+            "title": "Thread Id"
+          },
+          "type": {
+            "type": "string",
+            "const": "output",
+            "title": "Type",
+            "default": "output"
+          },
+          "output": {
+            "$ref": "#/components/schemas/Output"
+          }
+        },
+        "type": "object",
+        "required": [
+          "thread_id",
+          "output"
+        ],
+        "title": "OutputResponseMessage",
+        "description": "The response from an output"
+      },
       "Properties": {
         "properties": {
           "description": {
@@ -573,7 +653,14 @@
       "SelectDatasetResponseMessage": {
         "properties": {
           "content": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Content"
           },
           "thread_id": {
@@ -685,7 +772,14 @@
       "ToolResponseMessage": {
         "properties": {
           "content": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Content"
           },
           "thread_id": {
